--- a/Beta2/page1/page.css
+++ b/Beta2/page1/page.css
@@ -47,6 +47,7 @@ header {
   box-shadow: 0 4px 41px rgb(14 55 54 / 14%);
   padding: 15px 10%;
   transition: 0.2s;
+  z-index: 100;
 }
 
 .logo {
@@ -73,7 +74,73 @@ header {
 }
 
 .navbar a:hover {
+  transition: 0.3s ease;
   color: var(--main--color);
+}
+
+.navbar2 {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  right: 50px;
+  bottom: 50px;
+  border-radius: 50%;
+  background-color: var(--main--color);
+}
+
+.nav_wrapper {
+  display: inline-flex;
+  list-style: none;
+}
+
+.nav_wrapper .icon {
+  position: relative;
+  background: #fff;
+  border-radius: 50%;
+  padding: 15px;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.nav_wrapper .name {
+  position: absolute;
+  top: 0;
+  font-size: 14px;
+  background: #ffffff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.nav_wrapper .name::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background: #ffffff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.nav_wrapper .icon:hover .name {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 #menu-icon {
@@ -85,7 +152,7 @@ header {
 
 .home {
   width: 100%;
-  min-height: 100vh;
+  min-height: 80vh;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -98,10 +165,18 @@ header {
 }
 
 .home-img {
-  flex: 1 1 17rem;
+  box-sizing: border-box;
+  width: 600px;
+  height: 600px;
+  margin: 20px auto;
+  background-color: #dadce0;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
 }
 
-.home-img img {
+/*
+.home-img {
   animation: animate 3s linear infinite;
 }
 
@@ -116,6 +191,8 @@ header {
     transform: translate(-11px, 0);
   }
 }
+
+*/
 
 .home-text span {
   font-size: 1rem;
@@ -149,6 +226,7 @@ header {
 .btn:hover {
   color: #fff;
   background: var(--second-color);
+  transition: 0.3s ease;
 }
 
 .heading {
@@ -223,6 +301,14 @@ header {
   margin: 0.2rem 0 0.5rem;
 }
 
+.heading span a {
+  color: var(--second-color);
+}
+.heading span a:hover {
+  transition: 0.3s ease;
+  color: var(--main--color);
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -258,4 +344,8 @@ header {
 
 .bedbug-information {
   margin: 0 0 1rem;
+}
+
+.bedbug-information2 {
+  margin: 0 0 5rem;
 }
