--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
   font-family: "Poppins", sans-serif;
 }
 
+:root {
+  --main--color: #008148;
+  --second-color: #1e3932;
+}
+
 body {
   background: rgba(255, 255, 255, 0.1);
   min-height: 100vh;
@@ -164,4 +169,70 @@ body {
 
 .side-bg.active {
   left: 0;
+}
+
+
+.navbar2 {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  right: 50px;
+  bottom: 50px;
+  border-radius: 50%;
+  background-color: var(--main--color);
+}
+
+.nav_wrapper {
+  display: inline-flex;
+  list-style: none;
+}
+
+.nav_wrapper .icon {
+  position: relative;
+  background: #fff;
+  border-radius: 50%;
+  padding: 15px;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.nav_wrapper .name {
+  position: absolute;
+  top: 0;
+  font-size: 14px;
+  background: #ffffff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.nav_wrapper .name::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background: #ffffff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.nav_wrapper .icon:hover .name {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
