--- a/Beta2/Bedbug_Map.css
+++ b/Beta2/Bedbug_Map.css
@@ -214,6 +214,7 @@ body {
   opacity: 0;
   pointer-events: none;
   transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  color: #0f0f0f;
 }
 
 .nav_wrapper .name::before {
@@ -233,4 +234,8 @@ body {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+}
+
+.nav_wrapper a {
+  color: var(--main--color);
 }
